cli WIP
