# python/xpctl/dto.py
@@ -1,10 +1,10 @@
-from swagger_server.models import Experiment, ExperimentAggregate, Result, Error, Success, AggregateResult, TaskSummary
-from xpctl.backend.mongo.dto import MongoError, MongoSuccess
+from swagger_server.models import Experiment, ExperimentAggregate, Result, Response, AggregateResult, TaskSummary
+import xpctl.data
 
 
 def dto_experiment_details(exp):
-    if type(exp) == MongoError:
-        return Error(code=exp.code, message=exp.message)
+    if type(exp) == xpctl.data.Error:
+        return Response(**exp.__dict__)
     train_events = [Result(**r.__dict__) for r in exp.train_events]
     valid_events = [Result(**r.__dict__) for r in exp.valid_events]
     test_events = [Result(**r.__dict__) for r in exp.test_events]
@@ -16,12 +16,12 @@ def dto_experiment_details(exp):
 
 
 def dto_get_results(agg_exps):
-    if type(agg_exps) == MongoError:
-        return Error(code=agg_exps.code, message=agg_exps.message)
+    if type(agg_exps) == xpctl.data.Error:
+        return Response(**agg_exps.__dict__)
     results = []
     for agg_exp in agg_exps:
-        if type(agg_exp) == MongoError:
-            return Error(code=agg_exp.code, message=agg_exp.message)
+        if type(agg_exp) == xpctl.data.Error:
+            return Response(**agg_exp.__dict__)
         train_events = [AggregateResult(**r.__dict__) for r in agg_exp.train_events]
         valid_events = [AggregateResult(**r.__dict__) for r in agg_exp.valid_events]
         test_events = [AggregateResult(**r.__dict__) for r in agg_exp.test_events]
@@ -34,12 +34,12 @@ def dto_get_results(agg_exps):
 
 
 def dto_list_results(exps):
-    if type(exps) == MongoError:
-        return Error(code=exps.code, message=exps.message)
+    if type(exps) == xpctl.data.Error:
+        return Response(**exps.__dict__)
     results = []
     for exp in exps:
-        if type(exp) == MongoError:
-            return Error(code=exp.code, message=exp.message)
+        if type(exp) == xpctl.data.Error:
+            return Response(**exp.__dict__)
         train_events = [Result(**r.__dict__) for r in exp.train_events]
         valid_events = [Result(**r.__dict__) for r in exp.valid_events]
         test_events = [Result(**r.__dict__) for r in exp.test_events]
@@ -52,31 +52,37 @@ def dto_list_results(exps):
 
 
 def dto_task_summary(task_summary):
-    if type(task_summary) == MongoError:
-        return Error(code=task_summary.code, message=task_summary.message)
+    if type(task_summary) == xpctl.data.Error:
+        return Response(**task_summary.__dict__)
     return TaskSummary(**task_summary.__dict__)
 
 
 def dto_summary(task_summaries):
-    if type(task_summaries) == MongoError:
-        return Error(code=task_summaries.code, message=task_summaries.message)
+    if type(task_summaries) == xpctl.data.Error:
+        return Response(**task_summaries.__dict__)
     return [TaskSummary(**task_summary.__dict__) for task_summary in task_summaries]
 
 
 def dto_config2json(config):
-    if type(config) == MongoError:
-        return Error(code=config.code, message=config.message)
+    if type(config) == xpctl.data.Error:
+        return Response(config.__dict__)
     return config
 
 
 def dto_get_model_location(location):
-    if type(location) == MongoError:
-        return Error(code=location.code, message=location.message)
-    return location
+    return Response(**location.__dict__)
 
 
 def dto_put_requests(result):
-    if type(result) == MongoError:
-        return Error(**result.__dict__)
-    else:
-        return Success(**result.__dict__)
+    return Response(**result.__dict__)
+
+
+def dto_to_experiment(exp):
+    train_events = [xpctl.data.Result(**r.__dict__) for r in exp.train_events]
+    valid_events = [xpctl.data.Result(**r.__dict__) for r in exp.valid_events]
+    test_events = [xpctl.data.Result(**r.__dict__) for r in exp.test_events]
+    d = exp.__dict__
+    d.update({'train_events': train_events})
+    d.update({'valid_events': valid_events})
+    d.update({'test_events': test_events})
+    return xpctl.data.Experiment(**d)
